--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,6 +56,11 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <!-- First item at left corner -->
+                 <span class="rounded-circle cursor-pointer"
+                                     border-radius: 45px;">
+                                    <img src="~/images/EduHubLogo.webp"
+                                        alt="Profile Image" class="rounded-circle" height="50" />
+                        </span>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EduHub</a>
 
                 <!-- Toggle button -->
@@ -68,6 +73,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <!-- Remaining items at middle -->
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
