--- a/Views/Autheticate/LoginForm.cshtml
+++ b/Views/Autheticate/LoginForm.cshtml
@@ -15,10 +15,14 @@
         </div>
         <button type="submit" class="btn btn-primary mt-3 text-center justify-content-center mx-auto">Login</button>
     </form>
+  
+
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 
     <script type="text/javascript">
         $(document).ready(function () {
